--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header{
     position: sticky;
    top: 0;
    
-    background-color:#72B5F9;
+    background-color:#0AB6EA;
    z-index: 1000; 
 }
 
@@ -96,6 +96,8 @@ header{
     flex-direction: row;
     gap: 7rem;
   }
+
+
   #btn1 {
     margin-left: 160px;
     transition: all 0.5s;
@@ -178,15 +180,18 @@ bottom: 200px;
 .world {
 padding-left: 300px;
 font-family: "Acme", sans-serif;
-font-weight: 400;
+font-weight: 700;
 font-style: normal;
 color: #EDEDE9;
 
 }
 
 .whether{
-  padding-left: 200px;
-  font-size: 20px;
+  padding-left: 250px;
+  font-size: 26px;
+  
+ 
+
 }
 .ppp {
   padding-left: 280px;
@@ -194,15 +199,22 @@ color: #EDEDE9;
   font-size: 2em;
  line-height: 2em;
 color: #FDF8D2;
-  font-weight: 500;
-  font-style: normal;
+font-family: "Acme", sans-serif;
+font-weight: 400;
+font-style: normal;
  
 
 }
 .premier {
   color: #F25832;
+  padding-left: 0px;
+  font-size: 2.6rem;
+  
+  
 }
+.design{
 
+}
 .btn-31,
 .btn-31 *,
 .btn-31 :after,
@@ -212,7 +224,12 @@ color: #FDF8D2;
   border: 0 solid;
   box-sizing: border-box;
 }
-
+.get{
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+  Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+  Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-weight: 900;
+}
 .btn-31 {
   -webkit-tap-highlight-color: transparent;
  
@@ -366,6 +383,7 @@ color: #FDF8D2;
 
 .captain{
   color: #231508;
+ 
 }
 
 .nos{
@@ -373,6 +391,10 @@ color: #FDF8D2;
   font-family: "Acme", sans-serif;
   font-weight: 600;
   font-style: normal;
+  
+}
+.fiv{
+  padding-left: 20px;
 }
 .stud{
   font-family: "Permanent Marker", cursive;
@@ -406,16 +428,21 @@ margin-bottom: 10px;
 .plat {
   font-family: "Jaro", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 800;
+  font-weight: 400;
   font-style: normal;
   padding-left: 190px;
   color: wheat;
 }
+.move{
+  padding-left: 390px;
+}
 .engag{
-  color: blue;
- 
-
+  color: #E8999A;
+ padding-left: 290px;
+  font-family: "Acme", sans-serif;
+  font-weight: 600;
   font-style: normal;
+  
 
 
 }
@@ -473,6 +500,7 @@ margin-bottom: 10px;
   font-family: "Cardo", serif;
   font-weight: 400;
   font-style: normal;
+  padding-left: 20px;
 }
 .revi {
   font-family: "Acme", sans-serif;
