--- a/style.css
+++ b/style.css
@@ -18,9 +18,12 @@ ol a {
 
 .sec1 {
     height: 100vh;
-    background: linear-gradient(-45deg, #001C81, #474554, #2D888B, #5F0147);
+    /* background-color: #354A54; */
+    /* background-color: #344B47; */
+    background-color: #263E49;
+    /* background: linear-gradient(-45deg, #001C81, #474554, #2D888B, #5F0147);
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    animation: gradient 15s ease infinite; */
    /* background-color: #175676; */
     /* background: linear-gradient(blue, #1B4F72 70% ); */
     /* background-image: url(https://visme.co/blog/wp-content/uploads/2016/09/website-color-schemes-header-wide.jpg); */
@@ -47,10 +50,8 @@ ol a {
 
 
 
-
 header{
     display: flex;
-  
     flex-direction: row;
     padding-top: 30px;
     position: sticky;
@@ -141,7 +142,7 @@ header{
 }
 .buttons {
 padding-left: 500px;
-padding-top: 30px;
+padding-top: 7px;
 bottom: 200px;
 
 }
@@ -359,8 +360,8 @@ font-style: normal;
   }
 }
 .get {
-  margin-left: 70px;
-  padding: 15px;
+  margin-left: 50px;
+  padding: 17px;
   padding-left: 50px;
   padding-right: 50px;
   
@@ -377,10 +378,10 @@ font-style: normal;
   display:flex;
   flex-direction: row;
   gap:18rem;
-  padding-left: 450px;
+  padding-left: 470px;
   align-items: center;
   font-size: 5rem;
-  padding-top: 50px;
+  padding-top: 18px;
  
  
 }
@@ -391,7 +392,7 @@ font-style: normal;
 }
 
 .nos{
-  color: #FFDE84;
+  color:#EDD5C9;
   font-family: "Acme", sans-serif;
   font-weight: 600;
   font-style: normal;
@@ -479,7 +480,8 @@ margin-bottom: 10px;
 
 
 #coursesec {
-  height: 190vh;
+  /* height: 200vh; */
+  min-height: 300vh;
   background-color: #F6E9D0;
 }
 .let  {
